# llm-entropy-patterns

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.github/: docker-build-push.yml
creative_factual/: generate.py
evals/: creative_factual.py  creative_factual_prompts.py
evals/creative_factual/: generate.py  prompts.py
inference/: generate.py  statistics.py
utils/: health.py
